# lean-ai-gtd

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  MIGRATION_GUIDE.md  QUICK_FIX.md  README.md  TODO.md  TODO_userlogin.md  TOKEN_EXTENSION_SUMMARY.md  configure_guideline.md  deploy.sh  env.example  pyproject.toml  requirements.txt  run_backend.sh  seo_plan.md  shell-aliases.sh  tasks.md  test_filter_sync.md  test_login.py  test_migration.py  test_record_creation.py  test_record_fresh.py  test_record_with_flask.py  test_status_filter_change.py  vercel.json
backend/: .env  api_endpoints_analysis.md  app.py  deploy_schema.py  full_migrate_random_ids.py  index.py  migrate_complete_schema.py  migrate_database.py  migrate_info_resources.py  migrate_pomodoro_table.py  migrate_priority_progress.py  migrate_reminders_table.py  migrate_to_random_ids.py  openrouter_utils.py  requirements.txt  test_app_factory.py  test_global_logging.py  test_random_id.py  test_reminders_simple.py  verification_report.md  verify_random_id_system.py
docs/: IFLOW.md  PRD.md  claudecode.md  completion_summary.md  design_quick_capture.md  frontend-integration-report.md  goal.md  microservices-architecture-analysis.md  plan.md  test_cases_quick_capture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
scripts/: dev-quickstart.sh  setup_test_data.py  test_admin_functionality.py  test_auth_fixes.py  test_record_update.py
tests/: bottom_border_test.html  buttons_move_test.html  pomodoro_ui_test.html  reminder_banner_dark_mode_test.html  (+5 more)
(+136 files in other folders)
